k8s/app/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinicos-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinicos
      version: v1
  template:
    metadata:
      labels:
        app: clinicos
        version: v1
    spec:
      containers:
      - name: clinicos
        image: docker.io/indra1806/clinicos:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
