k8s/app/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clinicos-routing
  namespace: default
spec:
  hosts:
  - clinicos-service
  http:
  - route:
    - destination:
        host: clinicos-service
        subset: stable
      weight: 40
    - destination:
        host: clinicos-service
        subset: canary
      weight: 60
